required changes for users to migrate from one version of MITAB to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the CVS log comments.


CHANGES - Current Version:
--------------------------

 - Updated list of datum parameters from data made available by Bill Wemple
   from MapInfo on directionsmag.com: 7 new datum defns and 1 fixed.
   List of ellipsoids also updated (Bug 608, patch by Uffe K.)

 - Do not output a BG color in style string for transparent brushes (bug 693)

 - mitab_tabfile.cpp: Several fixes for TABFile::Open() when loading the
   tabfile fails. (provided by Stephen Cheesman). 

 - mitab_mapfile.cpp: Fixed error return value in LoadNextMatchingObjectBlock()
   per http://bugzilla.remotesensing.org/show_bug.cgi?id=615. NFW

 - mitab_ogr_datasource.cpp: Modified CreateLayer() to use 
   -1000,-1000,1000,1000 bounds for GEOGCS much like in mitab_bounds.cpp. 
   This ensures that geographic files in the range 0-360 works as well as
   -180 to 180.


Version 1.3.0 (2004-07-07)
--------------------------

 - Use tab as default delimiter (if none is explicitly specified) when 
   reading .MIF/.MID files (Anthony D, bug 37)  We still generate new files 
   using comma as delimiter.

 - C API: Added mitab_c_get_feature_count() and mitab_c_get_field_as_double(),
   added ability to create a feature of type TABFC_NoGeom (Anthony D)

 - Added support for reading affine coordsys parameters in extended 
   .map header block of v500+  (Anthony D, bug 41)

 - Added mitab_c_getlibversion() to C API. (Uffe K. - bug 21)

 - Write 3D geometries to MIF/tab as if they were 2D. NFW

 - Flush out .mif header on Close() if no features written. NFW

 - Fixed previous flushing logic to only do so for writable files. NFW

 - Removed obsolete mif2mif.cpp mif2tab.cpp mif2tabbatch.cpp.  They are